--- a/src/main/resources/templates/views/biz/ins/BIZINS003M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS003M0.html
@@ -117,15 +117,17 @@
             gf_Transaction(option, fn_callback);
         }
         
-        // settle 함수에 보낼 데이터를 가져오는 함수
-        function getSummarize(){
-        	var inputStdYymm = getStdYymm();
-            var input = JSON.stringify({ stdYymm: inputStdYymm });
-            //console.log("getsummarize input : " + input);
-        
-            summarize(input);
-        }
-        
+		// settle 함수에 보낼 데이터를 가져오는 함수
+		function getSummarize(){
+			var inputStdYymm = getStdYymm();
+			var input = JSON.stringify({ stdYymm: inputStdYymm });
+			//console.log("getsummarize input : " + input);
+		
+			if(confirm("Do you want to summarize Insurance movement?") == true){
+				summarize(input);
+			}
+		}
+
         function summarize(input) {
             
             //console.log("summarize input : " + input);
@@ -236,31 +238,32 @@
                    );
         }
 
-        /**
-         * Transaction callback 함수
-         **/
-        function fn_callback(result){
-           console.log("fn_callback : " + result.id);
-             if( result.resultCd == "S" ){
-                    
-                 switch (result.id){
-                     case "SelectList" :
-                         
-                         fn_setGrid(result.data);
-                         
-                     break;
-                     case "ExecuteList" :
-                         console.log("executeList case");
-                         main();
-                     break;
-                 }      
-             } else if( result.resultCd == "E") {
-                 
-            } else {
-                 console.log("fn_callback result : ", result);
-              }
-         }
-
+		/**
+		 * Transaction callback 함수
+		 **/
+		function fn_callback(result){
+		   console.log("fn_callback : " + result.id);
+			 if( result.resultCd == "S" ){
+					
+				 switch (result.id){
+					 case "SelectList" :
+						 
+						 fn_setGrid(result.data);
+						 
+					 break;
+					 case "ExecuteList" :
+						 console.log("executeList case");
+						 alert("Successfully Summarized");
+						 main();
+					 break;
+				 }	  
+			 } else if( result.resultCd == "E") {
+				 
+			} else {
+				 console.log("fn_callback result : ", result);
+			  }
+		 }
+		
            function fn_setGrid(data){
                 
                 dataView = new Slick.Data.DataView( { idField: unqId });
