--- a/src/main/resources/templates/views/biz/jnl/BIZJNL003M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL003M0.html
@@ -133,7 +133,9 @@
 			});
 			//console.log("getSettle input : " + input);
 
-			journalize(input);
+			if(confirm("Do you want to Journalize?") == true){
+				journalize(input);
+			}
 		}
 
 		function journalize(input) {
