--- a/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
+++ b/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
@@ -129,8 +129,10 @@
             			,	stdYymm: getStdYymm()
             			});
             //console.log("getSettle input : " + input);
-        
-            settle(input);
+            
+			if(confirm("Do you want to Settle accounts?") == true){
+				settle(input);
+			}
         }
         
         function settle(input) {
@@ -323,33 +325,33 @@
                        );
             }
             
-            /**
-             * Transaction callback 함수
-            **/
-            function fn_callback(result){
-                console.log("fn_callback : " + result.id);
-                if( result.resultCd == "S" ){
-                    
-                    switch (result.id){
-                        case "SelectList" :
-                            
-                            fn_setGrid(result.data);
-                            
-                        break;
-                        case "ExecuteList" :
-                            console.log("executeList case");
-                            main();
-                        break;
-                    }
-                    
-                } else if( result.resultCd == "E") {
-                    
-                } else {
-                    console.log("fn_callback result : ", result);
-                }
-            }
+			/**
+			* Transaction callback 함수
+			**/
+			function fn_callback(result){
+				console.log("fn_callback : " + result.id);
+				if( result.resultCd == "S" ){
 
-            function fn_setGrid(data){
+					switch (result.id){
+						case "SelectList" :
+
+							fn_setGrid(result.data);
+
+							break;
+						case "ExecuteList" :
+							console.log("executeList case");
+							alert("Successfully Settled");
+							main();
+						break;
+					}
+
+				} else if( result.resultCd == "E") {
+				} else {
+					console.log("fn_callback result : ", result);
+				}
+			}
+
+			function fn_setGrid(data){
                 
                 dataView = new Slick.Data.DataView( { idField: unqId });
                 grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
