--- a/src/main/resources/templates/views/biz/jnl/BIZJNL003M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL003M0.html
@@ -190,7 +190,7 @@
 			{ id: "atitNm",			name: "Account Title Name",	field: "atitNm",		width: 420,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" },
 			{ id: "drCrDvCd",		name: "Dr/Cr",				field: "drCrDvCd",		width: 100,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
 			{ id: "jrnlAmt",		name: "Jrnl Amt",			field: "jrnlAmt",		width: 150,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, headerCssClass: "slick-header-columns", cssClass: "slick-column-right" },
-			{ id: "frstRegEmpNo",	name: "Registrant ID",		field: "frstRegEmpNo",	width: 100,	sortable: true, editor: Slick.Editors.Text,	headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
+			{ id: "frstRegEmpNo",	name: "Registrant",			field: "frstRegEmpNo",	width: 100,	sortable: true, editor: Slick.Editors.Text,	headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
 			{ id: "frstRegDtm",		name: "Registration Date",	field: "frstRegDtm",	width: 120,	sortable: true, editor: Slick.Editors.Text,	headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
 		];
 
