company hompage add

--- a/src/main/resources/templates/views/user/newCompany.html
+++ b/src/main/resources/templates/views/user/newCompany.html
@@ -454,6 +454,7 @@
     	var vPtbEmail     = $("#managerEmail").val();
     	var vUsrPassword  = $("#usrPassword").val();
     	var vUsrPasswordAgain  = $("#usrPasswordAgain").val();
+    	var vCompHmpgUrl  = $("#companyHomepage").val();
     	var vPostNo       = $("#postalCode").val();
     	var vAddrs        = $("#basicAddress").val();
     	var vDtlsAddrs    = $("#detailedAddress").val();
@@ -568,6 +569,7 @@
             , ptbPhNo     : vPtbPhNo
             , ptbEmail    : vPtbEmail
             , usrPassword : vUsrPassword
+            , compHmpgUrl : vCompHmpgUrl
             , postNo      : vPostNo
             , addrs       : vAddrs
             , dtlsAddrs   : vDtlsAddrs
