--- a/src/main/resources/templates/views/user/newCompany.html
+++ b/src/main/resources/templates/views/user/newCompany.html
@@ -452,6 +452,7 @@
     	var vPtbNm        = $("#managerName").val();
     	var vPtbPhNo      = $("#managerPhone").val();
     	var vPtbEmail     = $("#managerEmail").val();
+    	var vPtbDeptNm    = $("#managerTeam").val();
     	var vUsrPassword  = $("#usrPassword").val();
     	var vUsrPasswordAgain  = $("#usrPasswordAgain").val();
     	var vCompHmpgUrl  = $("#companyHomepage").val();
@@ -568,6 +569,7 @@
             , ptbNm       : vPtbNm
             , ptbPhNo     : vPtbPhNo
             , ptbEmail    : vPtbEmail
+            , ptbDeptNm   : vPtbDeptNm
             , usrPassword : vUsrPassword
             , compHmpgUrl : vCompHmpgUrl
             , postNo      : vPostNo
