select box font size 조절

--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -175,7 +175,7 @@ a.nav-link.active {
 .form-select {
   width: 100%;
   padding: 10px;
-  font-size: 1rem;
+  font-size: 13px;
 }
 
 .list-unstyled li {
