스타일 조정

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -100,7 +100,8 @@
 				margin-top: 27px;
 			}
 			.file-attach {
-				width: 220px;
+				width: 400px;
+				font-size: 13px;
 			}
 			.select-date {
 				width: 210px;
