--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -29,7 +29,7 @@ a.nav-link.active {
 
 .slick-column-left {
   font-family: "Inter Var", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-  font-size: 12px;
+  font-size: 13px;
   text-align: left;
 }
 
@@ -65,6 +65,14 @@ a.nav-link.active {
   --alpine-cell-border-width: 0 1px 1px 0;
   --alpine-cell-border-color: #d4d4d4;
 }
+
+.slick-cell-checkboxsel {
+	background: #f0f0f0;
+	border-right-color: silver;
+	border-right-style: solid;
+	text-align: center;
+}
+
 #divMyGrid {
   background: white;
   outline: 0;
