--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -22,7 +22,7 @@ a.nav-link.active {
   /* flex-grow: 1 if we want to align sort icons to the right */
   --alpine-header-name-flex-grow: 1;
   font-family: "Inter Var", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-  font-size: 12px;
+  font-size: 13px;
   font-weight: bold;
   text-align: center;
 }
@@ -31,6 +31,7 @@ a.nav-link.active {
   font-family: "Inter Var", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
   font-size: 13px;
   text-align: left;
+  padding-left: 8px;
 }
 
 .slick-column-center {
@@ -43,6 +44,7 @@ a.nav-link.active {
   font-family: "Inter Var", -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
   font-size: 13px;
   text-align: right;
+  padding-right: 8px;
 }
 
 .slick-cell.copied {
