--- a/src/main/resources/templates/views/opn/srv/OPNSRV001M0.html
+++ b/src/main/resources/templates/views/opn/srv/OPNSRV001M0.html
@@ -1,100 +1,82 @@
 <!DOCTYPE html>
-<html
-	lang="ko"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/layout}"
->
-	<th:block layout:fragment="content">
-		<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
-		<div class="page-wrapper" id="page-wrapper">
-			<div class="container" id="container">
-				<h2>[[${menuNm}]]</h2>
-				<div class="ptag-container">
-					<!-- <span><a href="#"> Home ></a></span> -->
-					<span>[[${navigator}]]</span>
-					<div class="form-container">
-						<div class="form-box">
-							<form id="filter-form" name="form" method="post" action="/OPNSRV001M0SelectList" onsubmit="return false;">
-								<div class="row">
-									<div class="col">
-										<!-- 서비스코드/명 -->
-										<label for=lblSrvcCdNm>Service Code/Name : </label>
-										<input id="inpSrvcCdNm" name="inpSearchTxt" type="text" class="form-input-temp" placeholder="Input Name" />
-										<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">
-											Search
-										</button>
-									</div>
-									<div class="col text-end">
-										<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px"
-											onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
-											data-test="create-button" onsubmit="return false;" hidden="true">
-											Create
-										</button>
-										<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px"id="downloadExcel">
-											Download
-										</button>
-										<button form="new-form" type="button" class="btn btn-secondary" style="padding: 4px 10px; color: white; font-size: 13px" 
-											onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
-											data-test="edit-button" onsubmit="return false;" >
-											Edit
-										</button>
-									</div>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
+<th:block layout:fragment="content">
+	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
+	<div class="page-wrapper" id="page-wrapper">
+		<div class="container" id="container">
+			<h2>[[${menuNm}]]</h2>
+			<div class="ptag-container">
+				<!-- <span><a href="#"> Home ></a></span> -->
+				<span>[[${navigator}]]</span>
+				<div class="form-container">
+					<div class="form-box">
+						<form id="filter-form" name="form" method="post" action="/OPNSRV001M0SelectList" onsubmit="return false;">
+							<div class="row">
+								<div class="col-sm-6 col-md-3">
+									<input id="inpSrvcCdNm" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="Service Code/Name" />
 								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-				<div class="popupDataForm">
-					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="display: none;">Launch modal with form</button>
-		
-					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-						<div class="modal-dialog modal-small" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title">New report</h5>
-									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+								<div class="col-auto">
+									<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
 								</div>
-								<div class="modal-body">
-									<div class="row">
-									</div>
-								</div>
-								<div class="modal-footer">
-									<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal"> Cancel </a> <a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px;"> <path stroke="none" d="M0 0h24v24H0z" fill="none"></path> <path d="M12 5l0 14"></path> <path d="M5 12l14 0"></path> </svg> Save changes
-									</a>
+								<div class="col text-end">
+									<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="create-button" onsubmit="return false;" hidden="true">Create</button>
+									<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">Download</button>
+									<button form="new-form" type="button" class="btn btn-secondary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="edit-button" onsubmit="return false;">Edit</button>
 								</div>
 							</div>
-						</div>
+						</form>
 					</div>
 				</div>
 			</div>
-			<!-- Page content -->
-			<div class="page-body">
-				<div class="container-xl">
-					<div class="row row-cards">
-						<div class="col-12 mb-1">
-							<div class="card card-md d-flex flex-column h-100">
-								<div id="divMyGrid">
-									<table align="center" class="table"></table>
-								</div>
+			<div class="popupDataForm">
+				<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="display: none;">Launch modal with form</button>
+
+				<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal-dialog modal-small" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title">New report</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 							</div>
-						</div>
-					</div>
-					<div style="padding-top: 2em"></div>
-					<div class="col-12 mb-1">
-						<div class="card card-md ">
-							<div class="container my-3">
-								<div id="divMyGridBackup">
-									<table align="center" class="table"  ></table>
-								</div>
+							<div class="modal-body">
+								<div class="row"></div>
+							</div>
+							<div class="modal-footer">
+								<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal"> Cancel </a> <a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px;"> <path stroke="none" d="M0 0h24v24H0z" fill="none"></path> <path d="M12 5l0 14"></path> <path d="M5 12l14 0"></path> </svg> Save changes
+								</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<script src="js/utils.js"></script>
-		<script>
+		<!-- Page content -->
+		<div class="page-body">
+			<div class="container-xl">
+				<div class="row row-cards">
+					<div class="col-12 mb-1">
+						<div class="card card-md d-flex flex-column h-100">
+							<div id="divMyGrid">
+								<table align="center" class="table"></table>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div style="padding-top: 2em"></div>
+				<div class="col-12 mb-1">
+					<div class="card card-md ">
+						<div class="container my-3">
+							<div id="divMyGridBackup">
+								<table align="center" class="table"></table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="js/utils.js"></script>
+	<script>
 			function checkData(data) {
 			return parentCheckData(data, check_cols);
 			}
@@ -159,7 +141,7 @@
 			}
 			
 		</script>
-		<script>
+	<script>
 			$(document).ready(function () {
 				console.log("Document is ready.");
 				//화면 접속시 바로 조회
@@ -209,12 +191,12 @@
 			var xcpt_cols  = ["seqNo", "srvcCd", "oldSrvcStrDtm"];
 			var check_cols = ["srvcCd"];
 			var columns = [
-							{ id: unqId,			name: "Seq",					field: unqId,							width: 40, 	editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns" }
-						, { id: "srvcCd",			name: "service code",			field: "srvcCd",		sortable: true, width: 100,	editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns" }
-						, { id: "srvcNm",			name: "service name", 			field: "srvcNm",		sortable: true, width: 150, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns" }
-						, { id: "srvcDesc",			name: "service description",	field: "srvcDesc",		sortable: true, width: 500, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns" }
-						, { id: "srvcStrDtm",		name: "service start date",		field: "srvcStrDtm",	sortable: true, width: 120, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", hidden:true }
-						, { id: "oldSrvcStrDtm",	name: "service start date",		field: "oldSrvcStrDtm",	sortable: true, width: 120, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", hidden:true }
+							{ id: unqId,			name: "Seq",					field: unqId,							width: 40, 	editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "srvcCd",			name: "service code",			field: "srvcCd",		sortable: true, width: 100,	editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "srvcNm",			name: "service name", 			field: "srvcNm",		sortable: true, width: 150, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" }
+						, { id: "srvcDesc",			name: "service description",	field: "srvcDesc",		sortable: true, width: 500, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" }
+						, { id: "srvcStrDtm",		name: "service start date",		field: "srvcStrDtm",	sortable: true, width: 120, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", hidden:true, cssClass: "slick-column-center" }
+						, { id: "oldSrvcStrDtm",	name: "service start date",		field: "oldSrvcStrDtm",	sortable: true, width: 120, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", hidden:true, cssClass: "slick-column-center" }
 						, { id: "srvcUprc",			name: "service unit price",		field: "srvcUprc",		sortable: true, width: 120, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", hidden:true, formatter: currencyFormatter, cssClass: "slick-column-right" }
 						, { id: "basicsUsrCnt",		name: "Users",					field: "basicsUsrCnt",	sortable: true, width: 100, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", hidden:true, formatter: currencyFormatter, cssClass: "slick-column-right" }
 						];
@@ -244,6 +226,7 @@
 						, asyncEditorLoading: false
 						, autoEdit: false
 						, autoEditNewRow: false
+						, rowHeight: 35
 						};	
 	
 			var newRowIds = 0;
@@ -286,23 +269,7 @@
 				},
 			};
 	
-			function addSlickGridSomeStyling() {
-				const style = document.createElement("style");
-				style.innerHTML = `
-					.slick-header-columns {
-						font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-						font-size: 13px;
-					}
-					.slick-cell {
-						font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-						font-size: 13px;
-					}
-					`;
-				document.head.appendChild(style);
-			};
-	
 			function main() {
-				addSlickGridSomeStyling();
 				// 그리드 초기화 및 데이터 로드
 				console.log("Initializing SlickGrid...");
 				getSrvcList(
@@ -922,5 +889,5 @@
 			}
 	
 		</script>
-	</th:block>
+</th:block>
 </html>
