--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -185,8 +185,8 @@
           });
         }
         
-        $("#datepicker-icon").val(gv_year+"-"+gv_month+"-"+gv_day);
-        $("#datepicker-icon-prepend").val(gv_year+"-"+gv_month+"-"+gv_day);
+        $("#datepicker-icon").val(gv_today);
+        $("#datepicker-icon-prepend").val(gv_today);
         
         $("#inpStartStdYr").val(gv_year);
         $("#inpStartMnth").val(gv_month);
